syntax = "proto3";
package crowlabs.gamma.whitelist;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "whitelist/params.proto";
import "whitelist/buyer_ids.proto";
import "whitelist/buyers.proto";
// this line is used by starport scaffolding # 1
import "whitelist/buyer.proto";

option go_package = "github.com/crow-labs/gamma/x/whitelist/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crow-labs/gamma/whitelist/params";
  }
  // Queries a BuyerIds by index.
	rpc BuyerIds(QueryGetBuyerIdsRequest) returns (QueryGetBuyerIdsResponse) {
		option (google.api.http).get = "/crow-labs/gamma/whitelist/buyer_ids/{accAddr}";
	}

	// Queries a list of BuyerIds items.
	rpc BuyerIdsAll(QueryAllBuyerIdsRequest) returns (QueryAllBuyerIdsResponse) {
		option (google.api.http).get = "/crow-labs/gamma/whitelist/buyer_ids";
	}

// Queries a Buyers by index.
	rpc Buyers(QueryGetBuyersRequest) returns (QueryGetBuyersResponse) {
		option (google.api.http).get = "/crow-labs/gamma/whitelist/buyers/{buyerId}";
	}

	// Queries a list of Buyers items.
	rpc BuyersAll(QueryAllBuyersRequest) returns (QueryAllBuyersResponse) {
		option (google.api.http).get = "/crow-labs/gamma/whitelist/buyers";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetBuyerIdsRequest {
	  string accAddr = 1;

}

message QueryGetBuyerIdsResponse {
	BuyerIds buyerIds = 1 [(gogoproto.nullable) = false];
}

message QueryAllBuyerIdsRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBuyerIdsResponse {
	repeated BuyerIds buyerIds = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetBuyersRequest {
	  string buyerId = 1;

}

message QueryGetBuyersResponse {
	Buyers buyers = 1 [(gogoproto.nullable) = false];
}

message QueryAllBuyersRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBuyersResponse {
	repeated Buyers buyers = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
